--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "fcc-leaderboard",
   "version": "1.0.0",
   "description": "Leaderboard for Free Code Camp brownie points",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "pregit": "git add .",
     "git": "git commit -m",
-    "postgit": "git push"
+    "postgit": "git push",
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,9 @@
   },
   "homepage": "https://github.com/oksas/fcc-leaderboard#readme",
   "devDependencies": {
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "webpack": "^1.12.15"
   }
 }
