--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fcc-leaderboard",
   "version": "1.0.0",
   "description": "Leaderboard for Free Code Camp brownie points",
-  "main": "server.js",
+  "main": "./src/index.js",
   "scripts": {
     "pregit": "git add .",
     "git": "git commit -m",
@@ -28,6 +28,9 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
   }
 }
