--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "react": "^15.0.1",
+    "react-css-modules": "^3.7.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
   }
