--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-css-modules": "^3.7.6",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
   }
