--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.0.1",
     "react-css-modules": "^3.7.6",
     "react-dom": "^15.0.1",
     "sass-loader": "^3.2.0",
