--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-addons-css-transition-group": "^15.0.1",
     "react-css-modules": "^3.7.6",
     "react-dom": "^15.0.1",
+    "react-lazy-load": "^3.0.10",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.15"
