--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Leaderboard for Free Code Camp brownie points",
   "main": "./src/index.js",
   "scripts": {
+    "postinstall": "npm run build:prod",
     "pregit": "git add .",
     "git": "git commit -m",
     "postgit": "git push",
     "watch:dev": "webpack --watch",
     "build:dev": "webpack",
     "build:prod": "webpack --minimize",
-    "prestart": "npm run build:prod",
     "start": "node server"
   },
   "repository": {
